--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -493,7 +493,7 @@ First, please review the introduction to loggerhead sea turtles [here](PVA3_421.
 
 Next, download the Excel document for this example [here](Loggerhead2024.xlsx). We will work through the Excel example in class.
 
-NOTE: a worked version of the spreadsheet can be found here[](Loggerhead2024_worked.xlsx)
+NOTE: a worked version of the spreadsheet can be found [here](Loggerhead2024_worked.xlsx)
 
 Using your Excel spreadsheet, investigate four management scenarios for the loggerhead turtle population:
 
@@ -507,7 +507,7 @@ Using your Excel spreadsheet, investigate four management scenarios for the logg
     - Increase by 10% (add 0.1 to adult survival)          
     
     
-![turtle excluder device](ted1.jpg)    
+![turtle excluder device](TED1.jpg)    
 
 **Top Hat**: Which of the four management recommendations would have the greatest positive effect on this population?
 
