--- a/LECTURE9.Rmd
+++ b/LECTURE9.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
 
-The final extinction of a population is usually caused by factors that small populations are uniquely sensitive to; once a population gets small enough, *demographic stochasticity*, *genetic drift*, and *inbreeding depression* can together deliver the final blow to a population. 
+The final extinction of a population is usually caused by factors that small populations are uniquely sensitive to; once a population gets small enough, *demographic stochasticity*, *genetic drift*, and *inbreeding depression* can together deliver the 'final blow' to a population. 
 
 In conservation biology the study of the drivers of extinction for small populations is called the *small-population paradigm*. The small-population paradigm refers to the tendency in **conservation biology** to study those largely *stochastic* factors that can result in the extinction or degradation of small populations. 
 
