--- a/LECTURE9.Rmd
+++ b/LECTURE9.Rmd
@@ -98,7 +98,7 @@ Population Viability Analysis (PVA) is often used to model the processes involve
 
 The most widely-used PVA software, [Vortex](https://www.cpsg.org/our-approach/science-based-tools/vortex), gets its name from the extinction vortex concept. Vortex does allow explicit modeling of inbreeding and loss of genetic diversity in small populations.  
 
-![](vortex10.jpg){width=50%}
+![](Vortex10.jpg){width=50%}
 
 
 ## Example: Aruba island rattlesnake
@@ -116,9 +116,9 @@ The Aruba rattlesnake was listed as *Critically Endangered* by IUCN (it is no lo
 See [Lab 5](LAB5.html) for the related MVP activity.  
 
 
-**Q** Why are island-endemic species like the Aruba rattlesnake so vulnerable to extinction? [PointSolutions]
+**Q** Why are island-endemic species like the Aruba rattlesnake so vulnerable to extinction? [Top Hat]
 
-**Q** Are species that are confined to small areas (like the Aruba rattlesnake) more vulnerable to *environmental stochasticity* than species that occupy larger geographic ranges? [PointSolutions]
+**Q** Are species that are confined to small areas (like the Aruba rattlesnake) more vulnerable to *environmental stochasticity* than species that occupy larger geographic ranges? [Top Hat]
 
 
 
